Bug 357107 - After importing vCard with typeless TEL numbers, kAddressbook does not show any labels next to the phone numbers.
Summary: After importing vCard with typeless TEL numbers, kAddressbook does not show a...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-23 21:12 UTC by Gunter Ohrner
Modified: 2015-12-24 15:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
vCard with typeless TEL entries. (180 bytes, text/vcard)
2015-12-23 21:13 UTC, Gunter Ohrner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2015-12-23 21:12:27 UTC
Importing the attached vCard leads to an address book entry with two phone numbers, both of which are not shown with any labels / headings, which looks strange:

******************************************************************** 
Test1

01234567891332
01234567891331

Adressbuch Adressbuch
********************************************************************

Reproducible: Always



Expected Results:  
kAddressbook should at least display "phone number" or something next to the numbers, as it does for every other data field.
Comment 1 Gunter Ohrner 2015-12-23 21:13:09 UTC
Created attachment 96280 [details]
vCard with typeless TEL entries.
Comment 2 Laurent Montel 2015-12-24 07:29:16 UTC
which label ?
in vcf there is not label no ?
Could you give me screenshot from original version in original app ?
Comment 3 Laurent Montel 2015-12-24 15:02:13 UTC
Ok I understand now the problem
Comment 4 Laurent Montel 2015-12-24 15:30:56 UTC
Git commit 6496c1175a0061a765489f4fb40fcb237e9d9973 by Montel Laurent.
Committed on 24/12/2015 at 15:30.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 357107 - After importing vCard with typeless TEL numbers, kAddressbook does not show any labels next to the phone numbers.

FIXED-IN: 5.1.1

M  +3    -15   src/phonenumber.cpp
M  +2    -1    src/phonenumber.h
M  +3    -3    src/vcardtool.cpp

http://commits.kde.org/kcontacts/6496c1175a0061a765489f4fb40fcb237e9d9973