Fix Bug 357107 - After importing vCard with typeless TEL numbers, kAddressbook does not show any labels next to the phone numbers.

FIXED-IN: 5.1.1
BUG: 357107